# fmods

./: Cargo.toml  Readme.md
src/: cli.rs  config.rs  downloader.rs  factorio_api.rs  instance.rs  main.rs  mod_info.rs  utils.rs
