[package]
name = "fmods"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = {version = "3.0.10", features = ["json"]}
zip = "2.6.1"
serde_json = "1.0.140"
serde = {version = "1.0.219", features = ["derive"]}
clap = { version = "=4.5.20", features = ["derive"] }
colored = "3.0.0"
url = "2.5.4"
dirs = "6.0.0"
toml = "0.8.20"